[tool.poetry]
name = "infra-linux-docker"
version = "0.1.0"
description = "Projeto para infraestruturas em Linux e Docker, com Streamlit"
authors = ["Lucas <lucas-mvs@hotmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["docker", "linux", "streamlit", "infra"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
pandas = "^1.5.0"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
